--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -403,6 +403,7 @@
     <Content Include="ViewV5\CSS\weixin\index1.html" />
     <Content Include="ViewV5\CSS\WX.css" />
     <Content Include="ViewV5\images\DJ\sethd.png" />
+    <Content Include="ViewV5\images\qrcode.jpg" />
     <Content Include="ViewV5\images\TX.png" />
     <Content Include="ViewV5\images\head.jpg" />
     <Content Include="ViewV5\images\icon\CCXJ.png" />
