--- a/FTWeb/Web.config
+++ b/FTWeb/Web.config
@@ -56,7 +56,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QJY_Temp;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=101.201.143.151;initial catalog=QJY_XNY;user id=sa;password=bjszhl2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
 
