添加考试管理页面

--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -171,6 +171,18 @@
     <Content Include="ViewV5\AppPage\KQGL\KQGL.html" />
     <Content Include="ViewV5\AppPage\KQGL\KQINSTALL.html" />
     <Content Include="ViewV5\AppPage\KQGL\KQTJ.html" />
+    <Content Include="ViewV5\AppPage\KSGL\KSAP.html" />
+    <Content Include="ViewV5\AppPage\KSGL\KSAPLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\KSYJLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\SJGL.html" />
+    <Content Include="ViewV5\AppPage\KSGL\SJGLLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKFL.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKFLLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKGL.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\TKSTLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\USERCJLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSP.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJ.html" />
