--- a/FTWeb.Data/App.Config
+++ b/FTWeb.Data/App.Config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings><add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=101.201.143.151;initial catalog=QJY_XNY;user id=sa;password=bjszhl2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=;initial catalog=;user id=sa;password=;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
