--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -138,6 +138,7 @@
     <Content Include="ViewV5\AppPage\CRM\KHLXRLIST.html" />
     <Content Include="ViewV5\AppPage\CRM\KHLXRVIEW.html" />
     <Content Include="ViewV5\AppPage\CRM\XZLXRLIST.html" />
+    <Content Include="ViewV5\AppPage\DBGL\DBGLLIST.html" />
     <Content Include="ViewV5\AppPage\DXGL\DXGL.html" />
     <Content Include="ViewV5\AppPage\DXGL\DXGLLIST.html" />
     <Content Include="ViewV5\AppPage\DXGL\DXGLVIEW.html" />
