--- a/FTWeb/Web.config
+++ b/FTWeb/Web.config
@@ -88,6 +88,6 @@
     <!--提醒或者短信服务-->
     <add key="DXURL" value=""/>
     <!--短信URL,如需配置,联系2041612083-->
-
+    <add key="master" value="Data Source=101.201.143.151;Initial Catalog=master;User ID=sa;pwd =bjszhl2016" />
   </appSettings>
 </configuration>
