--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -190,7 +190,9 @@
     <Content Include="ViewV5\AppPage\KSGL\TKSTExport.html" />
     <Content Include="ViewV5\AppPage\KSGL\TKSTLIST.html" />
     <Content Include="ViewV5\AppPage\KSGL\USERCJLIST.html" />
+    <Content Include="ViewV5\AppPage\KSGL\USERKS.html" />
     <Content Include="ViewV5\AppPage\KSGL\USERKSDA.html" />
+    <Content Include="ViewV5\AppPage\KSGL\USERKSLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSP.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJ.html" />
