--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -163,7 +163,10 @@
     <Content Include="ViewV5\AppPage\JFBX\JFBXLIST.html" />
     <Content Include="ViewV5\AppPage\JFBX\JFBXVIEW.html" />
     <Content Include="ViewV5\AppPage\KCGL\KCGL.html" />
+    <Content Include="ViewV5\AppPage\KCGL\KJGL.html" />
+    <Content Include="ViewV5\AppPage\KCGL\KJGLLIST.html" />
     <Content Include="ViewV5\AppPage\KCGL\KCGLLIST.html" />
+    <Content Include="ViewV5\AppPage\KCGL\KJGLVIEW.html" />
     <Content Include="ViewV5\AppPage\KDDY\KDDY.html" />
     <Content Include="ViewV5\AppPage\KDDY\KDDYLIST.html" />
     <Content Include="ViewV5\AppPage\KDDY\KDDYYL.html" />
