--- a/FTWeb/packages.config
+++ b/FTWeb/packages.config
@@ -3,7 +3,7 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net40" requireReinstallation="True" />
   <package id="EntityFramework.zh-Hans" version="6.0.0" targetFramework="net40" requireReinstallation="True" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net40" />
   <package id="Senparc.Weixin" version="4.5.19" targetFramework="net45" />
   <package id="Senparc.Weixin.QY" version="3.3.5" targetFramework="net45" />
