--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -439,8 +439,12 @@
     <Content Include="ViewV5\CSS\WX.css" />
     <Content Include="ViewV5\CSS\zj.css" />
     <Content Include="ViewV5\images\DJ\sethd.png" />
+    <Content Include="ViewV5\images\icon-1.png" />
+    <Content Include="ViewV5\images\icon-2.png" />
+    <Content Include="ViewV5\images\icon-3.png" />
     <Content Include="ViewV5\images\qrcode.jpg" />
     <Content Include="ViewV5\images\skin\skin1.png" />
+    <Content Include="ViewV5\images\time-z.png" />
     <Content Include="ViewV5\images\tk_exam.png" />
     <Content Include="ViewV5\images\TX.png" />
     <Content Include="ViewV5\images\head.jpg" />
