--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -442,6 +442,7 @@
     <Content Include="ViewV5\images\icon-1.png" />
     <Content Include="ViewV5\images\icon-2.png" />
     <Content Include="ViewV5\images\icon-3.png" />
+    <Content Include="ViewV5\images\icon-4.png" />
     <Content Include="ViewV5\images\qrcode.jpg" />
     <Content Include="ViewV5\images\skin\skin1.png" />
     <Content Include="ViewV5\images\time-z.png" />
