--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -183,6 +183,7 @@
     <Content Include="ViewV5\AppPage\KQGL\KQGL.html" />
     <Content Include="ViewV5\AppPage\KQGL\KQINSTALL.html" />
     <Content Include="ViewV5\AppPage\KQGL\KQTJ.html" />
+    <Content Include="ViewV5\AppPage\KSGL\HTMLPage1.html" />
     <Content Include="ViewV5\AppPage\KSGL\KSAP.html" />
     <Content Include="ViewV5\AppPage\KSGL\KSAPLIST.html" />
     <Content Include="ViewV5\AppPage\KSGL\KSAPVIEW.html" />
