完善PC端工作流程，添加撤回功能

--- a/QJY.API/QJY.API.csproj
+++ b/QJY.API/QJY.API.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\Base\AuthManage.cs" />
+    <Compile Include="API\Base\BaseManage.cs" />
     <Compile Include="API\Base\INITManage.cs" />
     <Compile Include="API\CCXJ\CCXJManage.cs" />
     <Compile Include="API\CHAT\ChatManage.cs" />
