--- a/QJY.API/QJY.API.csproj
+++ b/QJY.API/QJY.API.csproj
@@ -110,6 +110,7 @@
     <Compile Include="API\CHAT\ChatManage.cs" />
     <Compile Include="API\CRM\CRMManage.cs" />
     <Compile Include="API\DBGL\DBGLManage.cs" />
+    <Compile Include="API\DBHD\DBHDManage.cs" />
     <Compile Include="API\DCGL\DCGLManage.cs" />
     <Compile Include="API\DDGL\DDGLManage.cs" />
     <Compile Include="API\DXGL\DXGLManage.cs" />
