--- a/FTWeb/Web.config
+++ b/FTWeb/Web.config
@@ -56,7 +56,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=;Initial Catalog=;User ID=sa;Password=;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QJY_SaaSEntities" connectionString="metadata=res://*/QJY.Data.csdl|res://*/QJY.Data.ssdl|res://*/QJY.Data.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=101.201.197.164;Initial Catalog=QJY_Signle;User ID=sa;Password=bjszhl2016;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
 
