添加微信支付授权

--- a/FTWeb.Data/QJY.Data.csproj
+++ b/FTWeb.Data/QJY.Data.csproj
@@ -435,6 +435,9 @@
     <Compile Include="SZHL_YX_HD_ZT.cs">
       <DependentUpon>QJY.tt</DependentUpon>
     </Compile>
+    <Compile Include="SZHL_YX_PAYINFO.cs">
+      <DependentUpon>QJY.tt</DependentUpon>
+    </Compile>
     <Compile Include="SZHL_YX_USER.cs">
       <DependentUpon>QJY.tt</DependentUpon>
     </Compile>
