--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -1518,6 +1518,7 @@
     <Content Include="View_Mobile\WX\hd\js\mui.pullToRefresh.material.js" />
     <Content Include="View_Mobile\WX\hd\login.html" />
     <Content Include="View_Mobile\WX\hd\myteam.html" />
+    <Content Include="View_Mobile\WX\hd\pay.html" />
     <Content Include="View_Mobile\WX\hd\tdewm.html" />
     <Content Include="View_Mobile\WX\hd\noigkbet.html" />
     <Content Include="View_Mobile\WX\hd\shopcard.html" />
