+工作流程新增流程分类功能,可以按照类别新增或查询工作流程(PC+微信) +工作流程中未审批的表单发起人可以选择撤回到草稿箱里（PC） +工作流程中被退回的表单发起人可以选择撤回到草稿箱里(PC) +添加工作流程步骤时可以删除和新增中间节点(PC) +修复流程节点超过10个出现的问题 +继续流程太长导致的审核按钮无法显示的问题 +修复工作流程在审核中不能修改扩展数据的问题 +修复手机端无法下载文件的bug +整理样式文件,去除一些不用的HTML文件 +修复了首次点击菜单时会重复发起请求的Bug

--- a/FTWeb/QjySaasWeb.csproj
+++ b/FTWeb/QjySaasWeb.csproj
@@ -204,12 +204,17 @@
     <Content Include="ViewV5\AppPage\KSGL\USERKSView.html" />
     <Content Include="ViewV5\AppPage\KSGL\USERKSDA.html" />
     <Content Include="ViewV5\AppPage\KSGL\USERKSLIST.html" />
+    <Content Include="ViewV5\AppPage\LCSP\APP_LCSP_SEL.html" />
+    <Content Include="ViewV5\AppPage\LCSP\APP_WF_LCSZ.html" />
+    <Content Include="ViewV5\AppPage\LCSP\ExtendSet.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSP.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPLIST.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJ.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPTJLIST.html" />
+    <Content Include="ViewV5\AppPage\LCSP\LCSPTJ_BAK.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSPVIEW.html" />
     <Content Include="ViewV5\AppPage\LCSP\LCSZ.html" />
+    <Content Include="ViewV5\AppPage\LCSP\LCSZSelect.html" />
     <Content Include="ViewV5\AppPage\LCSP\PDSZ.html" />
     <Content Include="ViewV5\AppPage\LCSP\PROCESS.html" />
     <Content Include="ViewV5\AppPage\QYHD\QYHDVIEW.html" />
@@ -240,7 +245,6 @@
     <Content Include="ViewV5\AppPage\XTGL\APPSET.html" />
     <Content Include="ViewV5\AppPage\XTGL\QYHPZ_DJ.html" />
     <Content Include="ViewV5\AppPage\XTGL\GLYGH.html" />
-    <Content Include="ViewV5\AppPage\XTGL\ROLEADD.html" />
     <Content Include="ViewV5\AppPage\XTGL\BranchSelect.html" />
     <Content Include="ViewV5\AppPage\XTGL\Company.html" />
     <Content Include="ViewV5\AppPage\XTGL\IMPORTUSER.html" />
@@ -288,18 +292,14 @@
     <Content Include="ViewV5\AppPage\YCGL\YCGLVIEW.html" />
     <Content Include="ViewV5\Base\APP_COMMENT.html" />
     <Content Include="ViewV5\Base\APP_IMPORT.html" />
-    <Content Include="ViewV5\Base\APP_LCSP_SEL.html" />
-    <Content Include="ViewV5\Base\APP_WF_LCSZ.html" />
     <Content Include="ViewV5\Base\doc.html" />
     <Content Include="ViewV5\Base\DownFolderL.html" />
     <Content Include="ViewV5\Base\DownFolder.html" />
-    <Content Include="ViewV5\Base\ExtendSet.html" />
     <Content Include="ViewV5\Base\FileSel.html" />
     <Content Include="ViewV5\Base\FolderSel.html" />
-    <Content Include="ViewV5\Base\LCSZSelect.html" />
     <Content Include="ViewV5\Base\pdf.html" />
     <Content Include="ViewV5\Base\ppt.html" />
-    <Content Include="ViewV5\Base\SelDXTemplate.html" />
+    <Content Include="ViewV5\AppPage\DXGL\SelDXTemplate.html" />
     <Content Include="ViewV5\Base\showvideo.html" />
     <Content Include="ViewV5\Base\showvideo_bak.html" />
     <Content Include="ViewV5\Base\Success.html" />
@@ -388,8 +388,6 @@
     <Content Include="ViewV5\Chat\qqface\jquery-browser.js" />
     <Content Include="ViewV5\Chat\qqface\jquery.qqFace.js" />
     <Content Include="ViewV5\Chat\qqface\qqface.css" />
-    <Content Include="ViewV5\CSS\BaseClass.css" />
-    <Content Include="ViewV5\CSS\BaseClassV3.css" />
     <Content Include="ViewV5\Base\DownFile.aspx" />
     <Content Include="ViewV5\Base\UploadTX.html" />
     <Content Include="ViewV5\Base\ZDLIST.html" />
@@ -409,17 +407,16 @@
     <Content Include="ViewV5\CSS\default.css" />
     <Content Include="ViewV5\CSS\im.css" />
     <Content Include="ViewV5\CSS\index.css" />
-    <Content Include="ViewV5\CSS\list.css" />
+    <Content Include="ViewV5\CSS\ksmk\list.css" />
     <Content Include="ViewV5\CSS\Office\bootstrap-responsive.min.css" />
     <Content Include="ViewV5\CSS\Office\bootstrap.min.css" />
     <Content Include="ViewV5\CSS\Office\bootstrap.min.js" />
     <Content Include="ViewV5\CSS\Office\Doc.css" />
     <Content Include="ViewV5\CSS\Office\ppt.css" />
     <Content Include="ViewV5\CSS\Office\xls.css" />
-    <Content Include="ViewV5\CSS\sass.css" />
-    <Content Include="ViewV5\CSS\saved_resource%282%29.css" />
-    <Content Include="ViewV5\CSS\saved_resource.css" />
-    <Content Include="ViewV5\CSS\ShowCss.css" />
+    <Content Include="ViewV5\CSS\ksmk\sass.css" />
+    <Content Include="ViewV5\CSS\ksmk\saved_resource%282%29.css" />
+    <Content Include="ViewV5\CSS\ksmk\saved_resource.css" />
     <Content Include="ViewV5\CSS\style.css" />
     <Content Include="ViewV5\CSS\weixin\images\1.png" />
     <Content Include="ViewV5\CSS\weixin\images\10.png" />
@@ -440,8 +437,8 @@
     <Content Include="ViewV5\CSS\weixin\index.css" />
     <Content Include="ViewV5\CSS\weixin\index.html" />
     <Content Include="ViewV5\CSS\weixin\index1.html" />
-    <Content Include="ViewV5\CSS\WX.css" />
-    <Content Include="ViewV5\CSS\zj.css" />
+    <Content Include="ViewV5\AppPage\XXFB\WX.css" />
+    <Content Include="ViewV5\CSS\ksmk\zj.css" />
     <Content Include="ViewV5\images\DJ\sethd.png" />
     <Content Include="ViewV5\images\icon-1.png" />
     <Content Include="ViewV5\images\icon-2.png" />
